--- a/kubernetes/flux/config/flux.yaml
+++ b/kubernetes/flux/config/flux.yaml
@@ -34,8 +34,7 @@ spec:
       target:
         group: networking.k8s.io
         kind: NetworkPolicy
-    # Increase the number of reconciliations that
-    # can be performed in parallel and bump the resources limits
+    # Increase the number of reconciliations that can be performed in parallel and bump the resources limits
     # https://fluxcd.io/flux/cheatsheets/bootstrap/#increase-the-number-of-workers
     - patch: |
         - op: add
