--- a/ansible/playbooks/templates/custom-cilium-helmchart.yaml
+++ b/ansible/playbooks/templates/custom-cilium-helmchart.yaml
@@ -23,7 +23,7 @@ spec:
       hostRoot: /sys/fs/cgroup
     cluster:
       id: 1
-      // name: home-kubernetes
+      # name: home-kubernetes
       name: chivel
     containerRuntime:
       integration: containerd
