--- a/.envrc
+++ b/.envrc
@@ -1,19 +1,17 @@
 #shellcheck disable=SC2148,SC2155
-export KUBECONFIG="$(expand_path ./kubeconfig)"
-export SOPS_AGE_KEY_FILE="$(expand_path ./age.key)"
+export KUBECONFIG="$(realpath ./kubeconfig)"
+export SOPS_AGE_KEY_FILE="$(realpath ./age.key)"
 # Venv
-PATH_add "$(expand_path ./.venv/bin)"
-export VIRTUAL_ENV="$(expand_path ./.venv)"
+PATH_add "$(realpath ./.venv/bin)"
+export VIRTUAL_ENV="$(realpath ./.venv)"
 export PYTHONDONTWRITEBYTECODE="1"
 # Ann Seabelle
-export ANSIBLE_COLLECTIONS_PATH=$(expand_path ./.venv/galaxy)
-export ANSIBLE_ROLES_PATH=$(expand_path ./.venv/galaxy/ansible_roles)
+export ANSIBLE_COLLECTIONS_PATH=$(realpath ./.venv/galaxy)
+export ANSIBLE_ROLES_PATH=$(realpath ./.venv/galaxy/ansible_roles)
 export ANSIBLE_VARS_ENABLED="host_group_vars"
 export ANSIBLE_LOCALHOST_WARNING="False"
 export ANSIBLE_INVENTORY_UNPARSED_WARNING="False"
-export K8S_AUTH_KUBECONFIG="$(expand_path ./kubeconfig)"
-# Talos
-# export TALOSCONFIG="$(expand_path ./kubernetes/bootstrap/talos/clusterconfig/talosconfig)"
+export K8S_AUTH_KUBECONFIG="$(realpath ./kubeconfig)"
 # Bin
-PATH_add "$(expand_path ./.bin)"
+# PATH_add "$(realpath ./.bin)"
 
